
* Add a ``--path`` option to ``pip un/zip``, so you can avoid zipping
  files that are outside of where you expect.

* Add ``--simulate`` option to ``pip zip``.

* Fix a problem with ``pip freeze`` not including ``-e svn+`` when an
  svn structure is peculiar.

* Allow ``pip -E`` to work with a virtualenv that uses a different
  version of Python than the parent environment.

0.2.1
-----

* Fixed small problem that prevented using ``pip.py`` without actually
  installing pip.

* Fixed ``--upgrade``, which would download and appear to install
  upgraded packages, but actually just reinstall the existing package.

* Fixed Windows problem with putting the install record in the right
  place, and generating the ``pip`` script with Setuptools.

* Download links that include embedded spaces or other unsafe
  characters (those characters get %-encoded).

* Fixed use of URLs in requirement files, and problems with some blank
  lines.

* Turn some tar file errors into warnings.

0.2
---

* Renamed to ``pip``, and to install you now do ``pip install
  PACKAGE``

* Added command ``pip zip PACKAGE`` and ``pip unzip PACKAGE``.  This
  is particularly intended for Google App Engine to manage libraries
  to stay under the 1000-file limit.

* Some fixes to bundles, especially editable packages and when
  creating a bundle using unnamed packages (like just an svn
  repository without ``#egg=Package``).

0.1.4
-----

* Added an option ``--install-option`` to pass options to pass
  arguments to ``setup.py install``

* ``.svn/`` directories are no longer included in bundles, as these
  directories are specific to a version of svn -- if you build a
  bundle on a system with svn 1.5, you can't use the checkout on a
  system with svn 1.4.  Instead a file ``svn-checkout.txt`` is
  included that notes the original location and revision, and the
  command you can use to turn it back into an svn checkout.  (Probably
  unpacking the bundle should, maybe optionally, recreate this